# BESBPO-Blog-Ecosystem

./: .env.managed.example  .gitignore  CNAME  README.md  docker-compose.managed.yml  docker-compose.yml  index.html
.agents_tmp/: PLAN.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
besbpo-blog-architecture/: FULL-ROLLOUT.md  PILOT-WAVE.md  README.md
besbpo-blog-cms-api/: .env.example  Dockerfile  README.md  package-lock.json  package.json
besbpo-blog-enterprise-svc/: .env.example  Dockerfile  README.md  pom.xml
besbpo-blog-intelligence-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
besbpo-blog-search-media-svc/: .env.example  Cargo.toml  Dockerfile  README.md
besbpo-blog-search-media-svc/.devcontainer/: devcontainer.json
besbpo-blog-search-media-svc/.github/: dependabot.yml
besbpo-blog-search-media-svc/.github/workflows/: ci.yml
besbpo-blog-search-media-svc/src/: db.rs  http.rs  main.rs  media.rs  rate_limit.rs  search.rs
besbpo-blog-syndication-svc/: .env.example  Dockerfile  README.md  go.mod  main.go
besbpo-blog-web/: Dockerfile.dev  README.md  next.config.js  package-lock.json  package.json  tsconfig.test.json
besbpo-editorial-dashboard/: .env.example  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
besbpo-embed-widget/: README.md  package.json  tsconfig.json
besbpo-subsidiary-site-beie/: README.md  config.json  index.html
besbpo-subsidiary-site-bellwether-architecture/: README.md  config.json  index.html
besbpo-subsidiary-site-bouncer-vip-express/: README.md  config.json  index.html
besbpo-subsidiary-site-garlaws/: README.md  config.json  index.html
besbpo-subsidiary-site-infrastructure/: README.md  config.json
besbpo-subsidiary-site-lastmile-gig/: README.md  config.json  (+1 more)
(+341 files in other folders)
